# Smart_Esprit

./: README.md
esprit_smart/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  esprit_smart.glade  esprit_smart.gladep.bak
esprit_smart/autom4te.cache/: output.1  requests  traces.0  traces.1
esprit_smart/po/: Makefile  Makefile.in
esprit_smart/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur.c  capteur.h  esprit_smart  interface.c  interface.c.bak  interface.h  main.c  reclamation.c  reclamation.h  reclamation.txt  smart.c  smart.h  stock.c  stock.txt
esprit_smart/src/.deps/: callbacks.Po  smart.Po  stock.Po
